Veränderungen an API und sonstige
